--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Saulo Lima",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
