--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-validator": "^5.1.2",
     "mysql": "^2.15.0",
     "npm": "^5.8.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.1.1"
   }
 }
