--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^5.8.0"
   },
   "devDependencies": {
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "supertest": "^3.0.0"
   }
 }
