--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-load": "^1.1.16",
     "express-validator": "^5.1.2",
     "mysql": "^2.15.0",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "mocha": "^5.1.1",
