--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "site da casa do codigo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "author": "Saulo Lima",
   "license": "ISC",
@@ -21,5 +22,8 @@
   "devDependencies": {
     "mocha": "^5.1.1",
     "supertest": "^3.0.0"
-  }
+  },
+  "engines": {
+    "node": "8.11.1"
+    }
 }
